--- a/Exercicios/Exercicio 1/index.html
+++ b/Exercicios/Exercicio 1/index.html
@@ -17,7 +17,7 @@
     </div>
     <br>
     <audio controls >
-        <source src="sample-9s.mp3" type="audio/mpeg">
+        <source src="Outros/sample-9s.mp3" type="audio/mpeg">
     </audio>
     <br>
     <video width="320" height="240" controls>
