--- a/Avaliacao01/index.html
+++ b/Avaliacao01/index.html
@@ -31,6 +31,7 @@
                 </ul>
             </li>
             <li><a>Acessórios</a></li>
+            <li><a href="cadastroProduto.html">Cadastro</a></li>
             <li><a>Contato</a></li>
         </ul>
     </nav>
